--- a/app/scss/layout/_about.scss
+++ b/app/scss/layout/_about.scss
@@ -104,18 +104,33 @@
         row-gap: var(--space-6-xx);
 
         &__image-container{
-            max-width: 563px;
+            max-width: 556px;
             grid-area: img;
             margin: initial;
             margin-right: auto;
+            @include flex(c,c,row);
         }
 
         &__text-container{
             grid-area: text;
+            margin-bottom: initial;
         }
 
         &__list{
             grid-area: list;
+        }
+
+        
+    }
+
+    @include breakpoint-up(xlarge){
+
+        &__list{
+            justify-content: space-evenly;
+        }
+
+        &__item{
+            max-width: 380px;
         }
     }
 }
