--- a/app/scss/layout/_wrapper.scss
+++ b/app/scss/layout/_wrapper.scss
@@ -30,10 +30,10 @@
 
     /* Desktop */
     @include breakpoint-up(large){
-        max-width: 1320px;
+        max-width: 1140px;
     }
 
     @include breakpoint-up(xlarge){
-        max-width: 1400px;
+        max-width: 1320px;
     }
 }
